--- a/src/main/resources/templates/th/member/mypage/profile/allFollow.html
+++ b/src/main/resources/templates/th/member/mypage/profile/allFollow.html
@@ -4,14 +4,16 @@
       layout:decorator="th/layout/defaultLayout">
 <head>
     <meta charset="UTF-8">
-    <title>질문 게시판</title>
+    <title>팔로워</title>
     <script type="text/javascript" th:src="@{/js/profile.js}"></script>
 </head>
 <body>
 <div layout:fragment="content">
+    <div class="container">
     <th:block th:replace="th/fragments/navBar_myPage"></th:block>
     <th:block th:replace="th/fragments/navBar_myPage_profile"></th:block>
-    <h2>팔로워</h2>
+
+        <h2>팔로워</h2>
 
     <div class="container">
         <table class="table table-hover">
