--- a/src/main/resources/templates/th/member/mypage/profile/memberProfile.html
+++ b/src/main/resources/templates/th/member/mypage/profile/memberProfile.html
@@ -3,13 +3,135 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="th/layout/defaultLayout">
 <head>
-
     <meta charset="UTF-8">
-    <title>사용자 프로필</title>
-
+    <title><th:block th:text="${memprofile.memberId}"/>님의 프로필</title>
+    <th:block layout:fragment="css">
+        <link rel="stylesheet" th:href="@{/css/profile.css}">
+    </th:block>
     <script type="text/javascript" th:src="@{/js/profile.js}"></script>
 </head>
 <body>
+<div layout:fragment="content">
+    <th:block th:replace="th/fragments/navBar_myPage"></th:block>
+    <div class="user-show-layout">
+        <div class="container">
+            <th:block th:replace="th/fragments/navBar_myPage_profile"></th:block>
+            <div class="row">
+                <div class="col-12 col-lg-3 wrap--profile">
+                    <div data-sticky-enabled="false" data-sticky-always="false" data-direction="top" data-offset="81" class="sticky-container"
+                         style="position: sticky; top: 81px;">
+                        <div class="sticky-child" style="position: relative">
+                            <div class="user-profile">
+                                <div class="user-profile__container">
+                                    <div class="user-profile__profile-image">
+                                        <!--사용자 이미지-->
+                                        <img th:if="${memprofile?.memberImg != null}" th:src="@{'/uploadImg'+${memprofile?.memberImg}}"
+                                             th:attr="srcset=|@{'/uploadImg'+${memprofile?.memberImg}} 1.5x,
+                                                              @{'/uploadImg'+${memprofile?.memberImg}} 2x,
+                                                              @{'/uploadImg'+${memprofile?.memberImg}} 3x|">
+                                        <img th:if="${memprofile?.memberImg == null}" class="comment-feed__item__content__author__image" alt="" th:src="@{'/uploadImg/profileImg/2020062511233324595ed8-2c5c-4fb0-9167-30b9fe6751fc.jpg'}"
+                                             th:attr="srcset=|@{'/uploadImg/profileImg/2020062511233324595ed8-2c5c-4fb0-9167-30b9fe6751fc.jpg'} 1.5x,
+                                                              @{'/uploadImg/profileImg/2020062511233324595ed8-2c5c-4fb0-9167-30b9fe6751fc.jpg'} 2x,
+                                                              @{'/uploadImg/profileImg/2020062511233324595ed8-2c5c-4fb0-9167-30b9fe6751fc.jpg'} 3x|">
+                                    </div>
+                                    <div class="profile-info">
+                                        <div class="profile-info__name">
+                                            <span th:text="${memprofile?.memberId}"></span>
+                                        </div>
+                                        <div class="profile-info__follow-state">
+                                            <div class="profile-info__follow-state__text">
+                                                <span>팔로워
+                                                    <span class="highlight" th:text="${followCount}"></span>
+                                                </span>
+                                            </div>
+                                            <div class="profile-info__follow-state__vertical-bar"></div>
+                                            <div class="profile-info__follow-state__text">
+                                                <span>팔로잉
+                                                    <span class="highlight" th:text="${followingCount}"></span>
+                                                </span>
+                                            </div>
+                                        </div>
+                                        <div class="profile-info__actions">
+                                            <button th:if="${fcount == 0}"
+                                                    class="profile-info__btn profile-info__btn--secondary"
+                                                    id="follow" name="follow" type="button">팔로우</button>
+                                            <button th:if="${fcount == 1}"
+                                                    class="profile-info__btn profile-info__btn--secondary"
+                                                    id="followcancel" name="followcancel" type="button">팔로우</button>
+                                        </div><br>
+                                        <div class="profile-info__actions">
+                                            <form action="/member/noteSending" method="post" id="sending" name="sending">
+                                            <button class="profile-info__btn profile-info__btn--secondary"
+                                                    id="notesend" name="notesend" type="button">쪽지보내기</button>
+                                                <input type="hidden" id="memberId" name="memberId" th:value="${memprofile.memberId}"/>
+                                                <input type="hidden" id="receiveId" name="receiveId" value=""/>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="user-profile__empty"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="horizontal-line"></div>
+                <div class="col-12 offset-lg-1 col-lg-8 wrap--contents">
+                    <div class="contents">
+                        <section class="post post--collection">
+                            <h5 class="post__title">
+                                사진
+                                <strong th:text="${photoCount}"></strong>
+                                <a class="posts__title__show-all" th:href="@{/member/allPhoto/{memberId}(memberId=${memprofile.memberId})}">전체보기</a>
+                            </h5>
+                            <div class="row post--cards__list">
+                                <th:block th:each="photo : ${memphoto}"><!-- 사진 게시물 4개 -->
+                                    <div class="col-4 col-md-3">
+                                        <div class="post--cards__item">
+                                            <a th:href="@{/photodetail/{photoBoardNo}(photoBoardNo=${photo.photoBoardNo})}">
+                                                <img class="post--cards__item__img" th:src="@{'/uploadImg'+${photo.photoImg1}}"
+                                                     th:attr="srcset=|@{'/uploadImg'+${photo?.photoImg1}} 1.5x,
+                                                              @{'/uploadImg'+${photo?.photoImg1}} 2x,
+                                                              @{'/uploadImg'+${photo?.photoImg1}} 3x|">
+                                            </a>
+                                        </div>
+                                    </div>
+                                </th:block>
+                            </div>
+                        </section>
+                        <section class="post post--collection">
+                            <h5 class="post__title">
+                                스크랩북
+                                <strong th:text="${scrapCount}"></strong>
+                                <a class="posts__title__show-all" th:href="@{/member/allScrap/{memberId}(memberId=${memprofile.memberId})}">전체보기</a><!-- id값 받아서 넘겨야되니까 allScrap/{memberId}로 바꾸던지 -->
+                            </h5>
+                            <div class="row post--cards__list">
+                                <th:block th:each="scrap : ${memberscrap}"><!-- 스크랩 게시물 4개 -->
+                                    <div class="col-4 col-md-3">
+                                        <div class="post--cards__item">
+                                            <a th:herf="@{/photodetail/{photoBoardNo}(photoBoardNo=${scrap.photoBoardNo})}">
+                                                <img class="post--cards__item__img" th:src="@{'/uploadImg'+${scrap.photoImg1}}"
+                                                     th:attr="srcset=|@{'/uploadImg'+${scrap?.photoImg1}} 1.5x,
+                                                                      @{'/uploadImg'+${scrap?.photoImg1}} 2x,
+                                                                      @{'/uploadImg'+${scrap?.photoImg1}} 3x|">
+                                            </a>
+                                        </div>
+                                    </div>
+                                </th:block>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+<!--
 <div layout:fragment="content">
     <th:block th:replace="th/fragments/navBar_myPage"></th:block>
     <th:block th:replace="th/fragments/navBar_myPage_profile"></th:block>
@@ -54,7 +176,7 @@
 
         <div class="form-group">
             <th:block th:each="userphoto : ${memphoto}">
-                <tr th:onclick="" ><!-- photodetail로 이동-->
+                <tr th:onclick="" >&lt;!&ndash; photodetail로 이동&ndash;&gt;
                     <td><img th:src="@{'/uploadImg'+${userphoto.photoImg1}}" style="width: 200px; height: 200px;" /></td>
                 </tr>
             </th:block>
@@ -69,12 +191,12 @@
 
         <div>
             <th:block th:each="userscrap : ${memberscrap}">
-                <tr th:onclick="" ><!-- photodetail로 이동-->
+                <tr th:onclick="" >&lt;!&ndash; photodetail로 이동&ndash;&gt;
                     <td><img th:src="@{'/uploadImg'+${userscrap.photoImg1}}" style="width: 200px; height: 200px;" /></td>
                 </tr>
             </th:block>
         </div>
     </div>
-</div>
+</div>-->
 </body>
 </html>
