--- a/src/main/resources/templates/th/photoBoard/photoBoardDetail.html
+++ b/src/main/resources/templates/th/photoBoard/photoBoardDetail.html
@@ -95,8 +95,7 @@
                                     <div class="comment-feed__form__content">
                                         <div class="comment-content-input">
                                             <input class="comment-content-input__text comment-feed__form__content__text"
-                                                id="commentContent" name="commentContent" data-ph="댓글을 작성해주세요" contenteditable="true">
-                                            </input>
+                                                id="commentContent" name="commentContent" data-ph="댓글을 작성해주세요" contenteditable="true"/>
                                         </div>
                                     </div>
                                     <div class="comment-feed__form__actions">
