--- a/src/main/resources/templates/th/askBoard/askBoardList.html
+++ b/src/main/resources/templates/th/askBoard/askBoardList.html
@@ -5,14 +5,16 @@
 <head>
     <meta charset="UTF-8">
     <title>질문게시판</title>
+    <th:block layout:fragment="css">
+        <link rel="stylesheet" th:href="@{/css/askBoard.css}">
+    </th:block>
 </head>
 <body>
 <div layout:fragment="content">
-<h2>게시글 목록</h2>
-
-<input type="button" id="askWrite" name="askWrite" onclick="location.href='/askinsert'" value="글쓰기"></input>
-
-<div class="container">
+    <div class="container">
+    <h2>게시글 목록</h2>
+        <button type="button" id="askWrite" name="askWrite" onclick="location.href='/askinsert'"
+                class="button button--color-gray-4 button--size-30 button--shape-4 card-detail-writer__follow">글쓰기</button>
     <table class="table table-hover">
         <tr>
             <th>글번호</th>
